hphp/hack/test/typecheck/is_expression/nonnull2.php.exp
File "nonnull2.php", line 6, characters 16-17:
Invalid argument (Typing[4110])
  File "nonnull2.php", line 11, characters 21-23:
  This is an int
  File "nonnull2.php", line 3, characters 12-16:
  It is incompatible with a nonnull value
